refactored the main job's method into a chain of transformations